crates/crucible-tui/src/shelf/snapshots/crucible_tui__shelf__tests__the_whole_shelf.snap
---
source: crates/crucible-tui/src/shelf/tests.rs
expression: "picture(&shelf(&providers, &models).within(100, 30, Glyphs::Unicode), 100)"
---
<Strong>Model</>                                                        <Quiet>now  anthropic · claude-sonnet-5 · high</>

<Quiet>╭</><Quiet>──────────────────────────────────────────────────────────────────────────────────────────────────</><Quiet>╮</>
<Quiet>│</><Quiet> Search</>    <Quiet>a model, or a vendor</>                                                                   <Quiet>│</>
<Quiet>╰</><Quiet>──────────────────────────────────────────────────────────────────────────────────────────────────</><Quiet>╯</>

<Quiet>╭</><Quiet>─────────────────────</><Quiet>┬</><Quiet>────────────────────────────────────────────────────────────────────────────</><Quiet>╮</>
<Quiet>│</><Quiet>  Providers</>          <Quiet>│</><Quiet>  Models</>                                                            <Quiet>4 of 12</> <Quiet>│</>
<Quiet>├</><Quiet>─────────────────────</><Quiet>┼</><Quiet>────────────────────────────────────────────────────────────────────────────</><Quiet>┤</>
<Quiet>│</> <Accent>›</> All             <Quiet>4</> <Quiet>│</> <Accent>›</> <Strong>claude-sonnet-5</>                              <Quiet>Anthropic</>       <Quiet>1M</>  <DoneMark>← now</>   <Quiet>│</>
<Quiet>│</> <Accent> </> Anthropic       <Quiet>3</> <Quiet>│</> <Accent> </> claude-opus-5                                <Quiet>Anthropic</>     <Quiet>200K</>          <Quiet>│</>
<Quiet>│</> <Accent> </> MoonshotAI      <Quiet>1</> <Quiet>│</> <Accent> </> claude-haiku-4-5                             <Quiet>Anthropic</>     <Quiet>200K</>  <Quiet>no rung</> <Quiet>│</>
<Quiet>│</> <Accent> </> OpenAI          <Quiet>·</> <Quiet>│</> <Accent> </> a model whose name nobody would type twice,  <Quiet>MoonshotAI</>       <Quiet>—</>  <Quiet>a model </><Quiet>│</>
<Quiet>│</>                     <Quiet>│</>                                                                            <Quiet>│</>
<Quiet>│</>                     <Quiet>│</>                                                                            <Quiet>│</>
<Quiet>│</>                     <Quiet>│</>                                                                            <Quiet>│</>
<Quiet>│</>                     <Quiet>│</>                                                                            <Quiet>│</>
<Quiet>│</>                     <Quiet>│</>                                                                            <Quiet>│</>
<Quiet>│</>                     <Quiet>│</>                                                                            <Quiet>│</>
<Quiet>│</>                     <Quiet>│</>                                                                            <Quiet>│</>
<Quiet>│</>                     <Quiet>│</>                                                                            <Quiet>│</>
<Quiet>│</>                     <Quiet>│</>                                                                            <Quiet>│</>
<Quiet>│</>                     <Quiet>│</>                                                                            <Quiet>│</>
<Quiet>│</>                     <Quiet>│</>                                                                            <Quiet>│</>
<Quiet>│</>                     <Quiet>│</>                                                                            <Quiet>│</>
<Quiet>╰</><Quiet>─────────────────────</><Quiet>┴</><Quiet>────────────────────────────────────────────────────────────────────────────</><Quiet>╯</>

  <Quiet>Effort</>    <Quiet>low</>   <Quiet>medium</>  <Accent>‹</> <Strong>high</> <Accent>›</>  <Quiet>xhigh</>   <Quiet>max</>

  <Quiet>tab pane · ↑↓ model · ←→ effort · enter takes both · esc to cancel</>
